<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="fill_horizontal|fill_vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/lblScreen"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:hint="@string/app_name"
        />

    <!-- First Row: | C | / | x | <- |  -->
    
    <Button
        android:id="@+id/btnC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblC"
        android:layout_below="@id/lblScreen"
        />
    
    <Button
        android:id="@+id/btnDiv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDiv"
        android:layout_below="@id/lblScreen"
        android:layout_toRightOf="@id/btnC" 
        />
    
    <Button
        android:id="@+id/btnMul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblMul"  
        android:layout_below="@id/lblScreen"
        android:layout_toRightOf="@id/btnDiv"
        />

    <Button
        android:id="@+id/btnCanc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblCanc"  
        android:layout_below="@id/lblScreen"
        android:layout_toRightOf="@id/btnMul"
        />
    
    <!-- Second Row: | 7 | 8 | 9 | - | -->
    
    <Button
        android:id="@+id/btn7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl7"
        android:layout_below="@id/btnC"
        />
     
    <Button
        android:id="@+id/btn8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl8"  
        android:layout_toRightOf="@id/btn7"
        android:layout_below="@id/btnDiv"
        />
  
    <Button
        android:id="@+id/btn9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl9"
        android:layout_toRightOf="@id/btn8"
        android:layout_below="@id/btnMul"
        />
    <Button
        android:id="@+id/btnMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblMin"
        android:layout_toRightOf="@id/btn9"
        android:layout_below="@id/btnCanc"
        />

    <!-- Third Row: | 4 | 5 | 6 | + | -->
    
    <Button
        android:id="@+id/btn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl4"
        android:layout_below="@id/btn7"
        />
    
    <Button
        android:id="@+id/btn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl5"
        android:layout_toRightOf="@id/btn4"
        android:layout_below="@id/btn8"
        />
    <Button
        android:id="@+id/btn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl6"
        android:layout_toRightOf="@id/btn5"
        android:layout_below="@id/btn9"
        />
    
    <Button
        android:id="@+id/btnPlus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPlus"
        android:layout_toRightOf="@id/btn6"
        android:layout_below="@id/btnMin"
        />

    <!-- Fourth Row: | 1 | 2 | 3 | () | -->
    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl1"
        android:layout_below="@id/btn4"
        />
    
    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl2"
        android:layout_toRightOf="@id/btn1"
        android:layout_below="@id/btn5"
        />
    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl3"  
        android:layout_toRightOf="@id/btn2"
        android:layout_below="@id/btn6"
        />
    
    <Button
        android:id="@+id/btnBrackets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblBrackets"
        android:layout_toRightOf="@id/btn3"
        android:layout_below="@id/btnPlus"  
        />

    <!-- Fifth Row: | 0 | . | +/- | = | -->
    
    <Button
        android:id="@+id/btn0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl0" 
        android:layout_below="@id/btn1"
        />
    
    <Button
        android:id="@+id/btnDot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblDot"
        android:layout_toRightOf="@id/btn0"
        android:layout_below="@id/btn2"
        />
    <Button
        android:id="@+id/btnPosNeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblPosNeg"
        android:layout_toRightOf="@id/btnDot"
        android:layout_below="@id/btn3"
        />
    
    <Button
        android:id="@+id/btnEqual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblEqual"
        android:layout_toRightOf="@id/btnPosNeg"
        android:layout_below="@id/btnBrackets"  
        />

</RelativeLayout>
